Simple login cookie

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Things App</title>
 </head>
 <body class="online">
-<h1>Things App <span id="status">Online</span></h1>
+<h1>Things App 
+    <div></div>
+    <section id="user-section">
+        <span id="current-user">no-user</span>
+        <input type="text" id="user" />
+        <button id="user-button">Set User</button>
+        <span id="status">Online</span>
+    </section>
+</h1>
 
 <div id="offline-banner">
     Du är offline. Appen är i läsläge.
