--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Things App</title>
+    <meta name="description" content="A simple todo app built as a PWA with Vite and vanilla JavaScript." />
+    <meta name="theme-color" content="#FFFFFF">
 </head>
 <body class="online">
 <h1>Things App 
@@ -32,5 +34,6 @@
 </div>
 
 <script type="module" src="/src/main.js"></script>
+
 </body>
 </html>
