SW related additions (minimum requirements?)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Things App</title>
     <meta name="description" content="A simple todo app built as a PWA with Vite and vanilla JavaScript." />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
     <meta name="theme-color" content="#FFFFFF">
 </head>
 <body class="online">
@@ -18,6 +21,7 @@
         <span id="status">Online</span>
     </section>
 </h1>
+
 
 <div id="offline-banner">
     Du är offline. Appen är i läsläge.
