another suggested fix

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="load-trigger"></div>
 </div>
 
-<script type="module" src="./src/main.js"></script>
+<script type="module" src="/src/main.js"></script>
 
 </body>
 </html>
